Kubernetes-Manifest/SVC.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-app
  namespace: abu-nemr
spec:
  selector:
    app: project-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
