Kubernetes-Manifest/Route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-app
  namespace: abu-nemr
spec:
  to:
    kind: Service
    name: svc-app
  port:
    targetPort: 8080
  wildcardPolicy: None
