Kubernetes-Manifest/NetworkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-app
  namespace: abu-nemr
spec:
  podSelector:
    matchLabels:
      app: project-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: project-app
